# artchiver

./: .gitignore  Cargo.toml  Justfile  README.md  TODO  build.rs  flake.nix  index.html  installer.iss  rust-toolchain  shell.nix
.github/workflows/: rust.yml
apps/artchiver/: Cargo.toml
apps/artchiver/src/: main.rs
assets/: sw.js
crates/sync/: Cargo.toml
crates/sync/src/: caching_pool.rs  environment.rs  host.rs  lib.rs  model.rs  plugin.rs  progress.rs  shared.rs  throttle.rs
crates/ux/: Cargo.toml
crates/ux/src/: lib.rs  ux_main.rs
doc/: ReadMe.md  release-notes-0.1.0.md
plugins/artchiver_sdk/: Cargo.toml
plugins/artchiver_sdk/src/: lib.rs  work.rs
plugins/artx-demo/: Cargo.toml
plugins/artx-demo/src/: lib.rs
plugins/artx-met/: Cargo.toml
plugins/artx-met/src/: lib.rs
plugins/artx-nga/: Cargo.toml
plugins/artx-nga/src/: lib.rs
plugins/artx-podcast/: Cargo.toml
plugins/artx-podcast/src/: lib.rs
plugins/artx-smithsonian/: Cargo.toml
plugins/artx-smithsonian/src/: lib.rs
plugins/nga/: Cargo.toml
plugins/nga/src/: lib.rs
plugins/the_met/: Cargo.toml
plugins/the_met/src/: lib.rs
src/: app.rs  main.rs
src/db/: model.rs  reader.rs  sync.rs  writer.rs
src/db/models/: plugin.rs  tag.rs  work.rs
src/plugin/: client.rs  download.rs  host.rs  mod.rs  thumbnail.rs
src/shared/: environment.rs  mod.rs  performance.rs  plugin.rs  progress.rs  tag.rs  throttle.rs  update.rs
src/sync/db/: caching_pool.rs  handle.rs  mod.rs  model.rs  reader.rs  sync.rs  tag.rs  work.rs  writer.rs
src/sync/db/models/: mod.rs  work.rs
src/sync/plugin/: client.rs  download.rs  host.rs
src/ux/: db.rs  dock.rs  egui_mpv.rs  gl_fns.rs  mod.rs  plugin.rs  tag.rs  theme.rs  tutorial.rs  work.rs
wix/: main.wxs
