[package]
name = "sync"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy.workspace = true
crossbeam.workspace = true
extism.workspace = true
io_tee.workspace = true
itertools.workspace = true
platform-dirs.workspace = true
progress-streams.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite.workspace = true
sha2.workspace = true
ureq.workspace = true
# libs
artchiver_sdk.workspace = true
