[package]
name = "artchiver_sdk"
description = "Shared types for communication with artchiver from a plugin"
version = "0.0.1"
edition = "2024"
license = "GPL-3"

[dependencies]
absolute_unit = { version = "0.10", features = ["serde"] }
anyhow = "1.0"
extism-pdk = "1.0"
jiff = { version ="0.2", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
urlencoding = "2.1"
ureq = { version = "3.0", default-features = false }
