[package]
name = "the_met"
description = "Plugin for Artchiver to access The Metropolitan Gallery of the Arts open data collection."
version = "0.0.1"
edition = "2024"
license = "GPL-3"

[lib]
crate-type = ["cdylib"]

[dependencies]
artchiver_sdk = { path = "../artchiver_sdk" }
csv = "1.3"
extism-pdk = "1.4"
jiff = "0.2"
serde = "1.0"
serde_json = "1.0"